# AIOps-Framework

./: .gitignore  LoRA_Finetuning_Images.ipynb  README.md  SLT_SFT.ipynb  command_to_start_training.txt  fast_DreamBooth_.ipynb  llm_router.py  main.py  old_rag.py  query_chroma.py  requirements.txt  setup_chroma.py  test101.py  train_language_model.py  vision_it_network.ipynb
API/: api.py  kafka_commands.txt
API_EndPoints/: api.py
CrewAI_Agents/: README.md  pyproject.toml
Docs/: book.toml
Docs/book/: 404.html  Advace_Rag.html  Final_RAG.html  Fine_Tunning.html  Optim.html  Simple_RAG.html  Vision_LLM.html  Word_Processing.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
Docs/src/: Advace_Rag.md  Final_RAG.md  Fine_Tunning.md  Optim.md  SUMMARY.md  Simple_RAG.md  Vision_LLM.md  Word_Processing.md  chapter_1.md
RAG/: Tokens.txt  Untitled.ipynb  cag2.py  embedding.npy  embeddings.txt  info.txt  main.py  preprocessing.py  start.py  test.py  test2.py  workflow.py
RAG/.ipynb_checkpoints/: main-checkpoint.py
Research_Hanaa/: Gen_AI_Framework.ipynb  llm_router.py  main.py  query_chroma.py  requirements.txt  setup_chroma.py  test101.py
Research_Manith/Advance/: GraphRag.py
Research_Manith/Attendance/: Neo4jCommands.txt  Untitled.ipynb  attendance.db  insert.ipynb  main.py  main3.py  main4.py  neo4.py  streamlit.py
Research_Manith/Finetuning/: FineTuning_Model.ipynb  Networking_SFT.ipynb  SLT_Finetune.ipynb  Untitled.ipynb  (+1 more)
WebApp/: package.json
llm_router/: pyproject.toml
llm_website/: index.html  package-lock.json
(+142 files in other folders)
