[project]
name = "llm_router"
version = "0.1.0"
description = "llm-Router using crewAI"
authors = [{ name = "Manith Ratnayake", email = "" },{ name = "Hanaa Azhar", email = ""}]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
llm_router = "llm_router.main:run"
run_crew = "llm_router.main:run"
train = "llm_router.main:train"
replay = "llm_router.main:replay"
test = "llm_router.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
